MacViews: Correctly handle character events when there's an active TextInputClient.

Currently in insertTextInternal:, we do not generate a synthetic character event
for the View hierarchy when there's an active TextInputClient. Since a Space key
press generates an insertText: (or insertText:replacementRange:) action message,
this causes views::Combobox to not receive the space key press. This is because
views::Combobox uses the views::PrefixSelector TextInputClient when focused. As
a result, a space key press on a combobox does not currently open the combobox
dropdown.

To solve, generate key events for all character events in insertTextInternal:.
The key event is generated before calling TextInputClient::Insert[Char/Text]
which is similar to other platforms. However, the key event is not passed to the
View hierarchy in case there's active composition text, since it should be
consumed by the IME in that case.

Also, a new variable hasUnhandledKeyDownEvent_ is introduced on the
BridgedContentView so that keyDownEvent_ remains valid for the duration of
keyDown:. This is needed because a keyDown: can infact lead to multiple
insertText: action messages.

Also, combobox unittests are modified to use an EventGenerator to test key event
behavior to provide better coverage. (With an EventGenerator,
ComboboxTest.NotifyOnClickWithSpaceKey fails on the master).

BUG=619545, 607429
TEST=With chrome://flags/#secondary-ui-md on Mac, open the Bookmark bubble.
Enable Full Keyboard Access (Ctrl+F7). Focus the Folder combobox. Ensure
pressing space opens the combobox dropdown.

Review-Url: https://codereview.chromium.org/2624093002
Cr-Commit-Position: refs/heads/master@{#443832}

Former-commit-id: b412f671d94f869489023137ba2705785883614f